applications/v1/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-http
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
     - host: "git.ls.local"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: gitea-http
                 port: 
                  name: http
